# bigbean-chess-engine

./: CMakeLists.txt
include/: search.h
src/: main.cpp  search.cpp
